# xscreensaver

./: .gitignore  CHANGELOG.md  CLAUDE.md  INSTALL.md  MATRIX_DEBUG_DOCUMENTATION.md  Makefile.in  Makefile.matrix_test  README.md  auto_probe_web.sh  build_native_debug.sh  build_web.sh  capture_web_debug.sh  compare_builds.sh  config.h.in  configure.ac  enhanced_compare.sh  index.html  index.js  index.wasm  index_debug.js  index_debug.wasm  index_nondebug.js  index_nondebug.wasm  install-dependencies.sh  matrix_debug.c  matrix_debug.h  matrix_debug.sh  matrix_test.c  probe_web.sh  xlockmore_web.h  xscreensaver_web.c
OSX/: InvertedSlider.h  PrefsReader.h  Randomizer.h  SaverListController.h  SaverRunner.h  Updater.h  XScreenSaverConfigSheet.h  XScreenSaverGLView.h  XScreenSaverView.h  nslog.h
android/: Makefile  build.gradle  screenhack-android.c
driver/: Makefile.in  XScreenSaver.ad.in  XScreenSaver_Xm_ad.h  XScreenSaver_ad.h  atoms.c  atoms.h  atomswm.c  auth.h  blurb.c  blurb.h  clientmsg.c  clientmsg.h  demo-Gtk-conf.c  demo-Gtk-conf.h  demo.ui  (+57 more)
hacks/glx/: CMakeLists.txt  LLM.md  Makefile  Makefile.in  TODO  antinspect.c  antmaze.c  ants.h  antspotlight.c  atlantis.c  atlantis.h  atunnel.c  b_draw.c  b_lockglue.c  b_sphere.c  beats.c  blinkbox.c  blocktube.c  boing.c  bouncingcow.c  boxed.c  boxed.h  bubble3d.c  bubble3d.h  buildlwo.c  buildlwo.h  cage.c  carousel.c  chessgames.h  chessmodels.c  chessmodels.h  chompytower.c  circuit.c  cityflow.c  companion.c  companion_disc.c  companion_heart.c  companion_quad.c  covid19.c  cow_face.c  (+257 more)
hacks/glx/grok/: Makefile
(+320 files in other folders)
